Bug 1545360: Make nsBoxFrame and nsLeafBoxFrame invoke (or inherit) superclass MarkIntrinsicISizesDirty() method. r=emilio a=pascalc

These functions have a comment that suggests that the inherited
functionality isn't applicable and would all be skipped.  This comment is
no longer true, so let's make use of the inherited function.

Differential Revision: https://phabricator.services.mozilla.com/D28264

--HG--
extra : source : 79b7450eff2c0f80bb24cee2a1a3938640d4ae1a
extra : histedit_source : 56c68875ddb4ff5d4af23a42ddfe4950b0a9d2f2